<resources>
    <string name="app_name">GeoManage</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="logo_description">Logo do App</string>
    <string name="txt_button_entrar">Entrar</string>
    <string name="txt_tela_cadastro">Não tem conta? Cadastre-se!</string>

    <string name="txt_button_registrar">Registrar</string>
    <string name="txt_tela_login">Já possui uma conta? Entre aqui!</string>
    <string name="hint_nome">Nome</string>

    <string name="listar_cidades">Listar Cidades</string>
    <string name="listar_enderecos">Listar Endereços</string>
    <string name="listar_usuarios">Listar Usuários</string>
    <string name="cadastrar_cidade">Cadastrar Cidade</string>
    <string name="cadastrar_enderecos">Cadastrar Endereços</string>
    <string name="hint_nome_cidade">Nome da Cidade</string>
    <string name="btn_adicionar_cidade">Adicionar Cidade</string>
    <string name="hint_endereco">Endereço</string>
    <string name="hint_rua">Rua</string>
    <string name="hint_bairro">Bairro</string>
    <string name="hint_cidade">Cidade</string>
    <string name="hint_estado">Estado</string>
    <string name="hint_pais">País</string>
    <string name="hint_cep">CEP</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="btn_adicionar_endereco">Adicionar Endereço</string>
    <string name="title_adicionar_cidade">Adicionar Cidade</string>
    <string name="descricao_cancelar">Cancelar</string>
    <string name="title_adicionar_endereco">Adicionar Endereço</string>
    <string name="hint_longitude_endereco">Longitude do endereço</string>
    <string name="hint_latitude_endereco">Latitude do endereço</string>
    <string name="hint_titulo_endereco">Título do endereço</string>
    <string name="btn_buscar_endereco">Buscar endereço</string>
    <string name="visualizar_detalhes_endereco">Visualizar detalhes do endereço</string>
    <string name="title_detalhes_cidade">Detalhes da Cidade</string>
    <string name="txt_button_editar">Editar informações</string>
    <string name="txt_button_excluir">Excluir</string>
    <string name="title_detalhes_endereco">Detalhes do Endereço</string>
    <string name="hint_descricao_endereco">Descrição do endereço</string>
    <string name="title_detalhes_usuario">Detalhes do Usuário</string>
    <string name="hint_senha_atual">Senha atual</string>
    <string name="hint_nova_senha">Nova senha</string>
    <string name="instrucao_alteracao_senha_usuario">Se não desejar alterar a senha, por favor, insira a senha atual nos campos \'Senha Atual\' e \'Nova Senha\'.</string>
    <string name="descricao_adicionar">Adicionar item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_button_voltar">Voltar</string>
    <string name="title_informacoes_endereco">Informações do Endereço</string>
    <string name="btn_visualizar_infos_endereco">Visualizar informações</string>
    <string name="btn_salvar_endereco">Salvar endereço</string>


</resources>