<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/green_logo">

    <EditText
        android:id="@+id/nomeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome_cidade" />

    <EditText
        android:id="@+id/estadoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_estado" />

    <Button
        android:id="@+id/adicionarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_adicionar_cidade" />
</LinearLayout>
