<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.endereco.DetalhesEnderecoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_logo"
        tools:context=".activities.endereco.InformacoesEndereco">

        <View
            android:id="@+id/containerTop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/green_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/title_informacoes_endereco"
            android:textSize="@dimen/title_size"
            android:textStyle="italic"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/containerTop"
            app:layout_constraintEnd_toEndOf="@id/containerTop"
            app:layout_constraintStart_toStartOf="@id/containerTop"
            app:layout_constraintTop_toTopOf="@id/containerTop" />

        <!-- Endereço -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/containerTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/dark_cyan_green"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enderecoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
                android:hint="@string/hint_endereco"
                android:inputType="text"
                android:maxLines="1"
                android:editable="false"
                android:focusable="false"
                android:clickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Rua -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutRua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutEndereco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/dark_cyan_green"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ruaEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
                android:hint="@string/hint_rua"
                android:inputType="text"
                android:maxLines="1"
                android:editable="false"
                android:focusable="false"
                android:clickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Bairro -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutBairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutRua"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/dark_cyan_green"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bairroEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
                android:hint="@string/hint_bairro"
                android:inputType="text"
                android:maxLines="1"
                android:editable="false"
                android:focusable="false"
                android:clickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Cidade -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutBairro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/dark_cyan_green"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cidadeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
                android:hint="@string/hint_cidade"
                android:inputType="text"
                android:maxLines="1"
                android:editable="false"
                android:focusable="false"
                android:clickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Estado -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutCidade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/dark_cyan_green"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/estadoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
                android:hint="@string/hint_estado"
                android:inputType="text"
                android:maxLines="1"
                android:editable="false"
                android:focusable="false"
                android:clickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- País -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutEstado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/dark_cyan_green"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/paisEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
                android:hint="@string/hint_pais"
                android:inputType="text"
                android:maxLines="1"
                android:editable="false"
                android:focusable="false"
                android:clickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- CEP -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutCep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutPais"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/dark_cyan_green"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cepEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
                android:hint="@string/hint_cep"
                android:inputType="number"
                android:maxLines="1"
                android:editable="false"
                android:focusable="false"
                android:clickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botão de Salvar -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVoltar"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_btn_selector"
            android:enabled="true"
            android:padding="15dp"
            android:text="@string/txt_button_voltar"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutCep"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
